--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appnope==0.1.0
 cffi==1.3.0
+colorlog==2.6.0
 decorator==4.0.4
 Django==1.8.5
 gnureadline==6.3.3
@@ -7,6 +8,7 @@ greenlet==0.4.7
 ipython==4.0.0
 ipython-genutils==0.1.0
 lxml==3.4.4
+nose==1.3.7
 -e git+git@github.com:newsdev/nyt-ap-elections.git#egg=nyt_ap_elections
 path.py==8.1.2
 peewee==2.6.4
